att quarto